--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="grid-item"></div>
       <div class="grid-item"></div>  
       <div class="grid-item"><h1 id="name2">ROHITHA</h1></div>
-      <div class="grid-item"> <a href="file:///C:/Users/rohit/Downloads/Resume-Rohitha-Pudu-3.pdf" style="text-decoration:none;color:rgb(255, 255, 255)"><button id="resume">Resume</button></div></a>
+      <div class="grid-item"> <a href="https://acrobat.adobe.com/id/urn:aaid:sc:AP:3c7ba7cb-4fa9-45dd-8209-a9d2b209c8c5" style="text-decoration:none;color:rgb(255, 255, 255)"><button id="resume">Resume</button></div></a>
       <div class="grid-item"> <a href="projects.html" style="text-decoration:none;color:rgb(0, 0, 0)"><button id="projects">Projects</button></div></a>  
       <div class="grid-item"><h1 id="name3">PUDU<span id="dot">.</span></h1></div>
       <div class="grid-item"></div>
