--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
     <div class="card">
     <img id="amor" src=""style="width:100%">
     <p class="title">Resume</p>
-    <p><a href="file:///C:/Users/rohit/Downloads/Resume-Rohitha-Pudu-3.pdf"><button>View</button></a></p>
+    <p><a href="https://acrobat.adobe.com/id/urn:aaid:sc:AP:3c7ba7cb-4fa9-45dd-8209-a9d2b209c8c5" style="text-decoration:none;color:rgb(255, 255, 255)"><button>View</button></a></p>
     </div>
     </section>
     </body>
